--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				}
 				// Detect movement and display corresponding text
 				if (startDetectMovement){
-					checkMovement();
+					detectMovement();
 				}
 			}
 
